OLD/tests/expects/map_key_failure/test_pointer_to_int_key.expect
error: Invalid map key type: *i32. Keys must be primitives (integers, floats, bool) or string pointers (*u8, *i8)
  --> map_key_failure/test_pointer_to_int_key.truk:2:12
  |
1 | fn main() : i32 {
2 |     var m: map[*i32, i32] = make(@map[*i32, i32]);
  |            ^
3 |     var x: i32 = 42;
  |
error: Unknown variable type: map[*i32, i32]
  --> map_key_failure/test_pointer_to_int_key.truk:2:5
  |
1 | fn main() : i32 {
2 |     var m: map[*i32, i32] = make(@map[*i32, i32]);
  |     ^
3 |     var x: i32 = 42;
  |
error: Undefined identifier: m
  --> map_key_failure/test_pointer_to_int_key.truk:4:5
  |
3 |     var x: i32 = 42;
4 |     m[&x] = 100;
  |     ^
5 |     delete(m);
  |
error: Undefined identifier: m
  --> map_key_failure/test_pointer_to_int_key.truk:4:5
  |
3 |     var x: i32 = 42;
4 |     m[&x] = 100;
  |     ^
5 |     delete(m);
  |
error: Index operation on invalid type
  --> map_key_failure/test_pointer_to_int_key.truk:4:6
  |
3 |     var x: i32 = 42;
4 |     m[&x] = 100;
  |      ^
5 |     delete(m);
  |
error: Assignment with invalid types
  --> map_key_failure/test_pointer_to_int_key.truk:4:11
  |
3 |     var x: i32 = 42;
4 |     m[&x] = 100;
  |           ^
5 |     delete(m);
  |
error: Undefined identifier: m
  --> map_key_failure/test_pointer_to_int_key.truk:5:12
  |
4 |     m[&x] = 100;
5 |     delete(m);
  |            ^
6 |     return 0;
  |
error: Failed to resolve argument type for delete
  --> map_key_failure/test_pointer_to_int_key.truk:5:11
  |
4 |     m[&x] = 100;
5 |     delete(m);
  |           ^
6 |     return 0;
  |

Compilation failed with 8 error(s)
